5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4191/executions/1831_3185.log
== TEST (2019-06-13 16:15:56) 
-- CODE:
from numpy import *
vetor=array(eval(input("Vetor:")))
j=""
for i in range(len(vetor)):
	j=vetor[-i]
	vetor[i]=j

print(vetor)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:16:18) 
-- CODE:
from numpy import *
vetor=eval(input("Vetor:"))
j=""
for i in range(len(vetor)):
	j=vetor[-i]
	vetor[i]=j

print(vetor)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:16:48) 
-- CODE:
from numpy import *
vetor=input("Vetor:")
j=""
for i in range(len(vetor)):
	j=vetor[-i]
	vetor[i]=j

print(vetor)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:17:08) 
-- CODE:
from numpy import *

vetor=array(input("Vetor:"))
j=""
for i in range(len(vetor)):
	j=vetor[-i]
	vetor[i]=j

print(vetor)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:17:37) 
-- CODE:
from numpy import *

vetor=array(input("Vetor:"))
j=""
for i in len(vetor):
	j=vetor[-i]
	vetor[i]=j

print(vetor)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:18:28) 
-- CODE:
from numpy import *

vetor=array(input("Vetor:"))
j=""
for i in range(len(vetor)):
	j=vetor[-i]
	vetor[i]=j

print(vetor)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:18:44) 
-- CODE:
from numpy import *

vetor=array(input("Vetor:"))
j=""
for i in range(size(vetor)):
	j=vetor[-i]
	vetor[i]=j

print(vetor)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:21:01) 
-- CODE:
from numpy import *

vetor=array(input("Vetor:"))
j=""
b=0
for i in range(size(vetor)):
	j=vetor[b-i]
	vetor[i]=j
	
print(vetor)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:21:39) 
-- CODE:
from numpy import *

vetor=array(input("Vetor:"))
j=""
b=0
for i in range(size(vetor)):
	b=b-i
	j=vetor[b]
	
	vetor[i]=j
	
print(vetor)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:22:48) 
-- CODE:
from numpy import *

vetor=array(input("Vetor:"))
j=""
b=0
for i in range(size(vetor)):
	b=b-i
	vetor[b]=j
	
	vetor[i]=j
	
print(vetor)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:23:05) 
-- CODE:
from numpy import *

vetor=(input("Vetor:")
j=""
b=0
for i in range(size(vetor)):
	b=b-i
	vetor
	
	vetor[i]=j
	
print(vetor)	
-- ERROR:
File "XXXX", line 4
    j=""
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:23:11) 
-- CODE:
from numpy import *

vetor=input("Vetor:")
j=""
b=0
for i in range(size(vetor)):
	b=b-i
	vetor
	
	vetor[i]=j
	
print(vetor)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:24:07) 
-- CODE:
from numpy import *

vetor=input("Vetor:")
j=""
b=-1
for i in range(size(vetor)):
	b=b-i
	j=vetor[b]
	
	vetor[i]=j
	
print(vetor)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:24:34) 
-- CODE:
from numpy import *

vetor=array(input("Vetor:"))
j=""
b=-1
for i in range(size(vetor)):
	b=b-i
	j=vetor[b]
	
	vetor[i]=j
	
print(vetor)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:28:28) 
-- CODE:
from numpy import *

vetor=array(input("Vetor:"))
j=""
b=-1
for i in range(size(vetor)):
	j=vetor[b]-i
	vetor[b]=j
	vetor[i]=vetor[b]
	
print(vetor)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:29:10) 
-- CODE:
from numpy import *

vetor=array(input("Vetor:"))
j=""
b=-1
for i in range(size(vetor)):
	j=vetor[b]
	vetor[b]=j
	vetor[i]=vetor[b]
	b=b-1
print(vetor)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:30:21) 
-- CODE:
from numpy import *

vetor=array(input("Vetor:"))
j=""
b=-1
for i in range(size(vetor)):
	vetor[j]=vetor[b]
	vetor[b]=vetor[j]
	vetor[i]=vetor[b]
	b=b-1
print(vetor)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:36:00) 
-- CODE:
from numpy import *

s=array(input("Vetor:"))
j=""
b=0
for i in range(size(s)):
	s[i]=s[0-i]
	j=j+s[i]
print(vetor)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:36:12) 
-- CODE:
from numpy import *

s=array(input("Vetor:"))
j=""
b=0
for i in range(size(s)):
	s[i]=s[b-i]
	j=j+s[i]
print(vetor)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:37:17) 
-- CODE:
from numpy import *

s=array(input("Vetor:"))
j=""
b=-1
for i in range(size(s)):
	j=j+s[b-i]
	b=b-1
print(vetor)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:37:50) 
-- CODE:
from numpy import *

s=array(input("Vetor:"))
j=""
b=-1
for i in range(size(s)):
	j=j+b-i
	b=b-1
print(vetor)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:39:54) 
-- CODE:
from numpy import *

s=input("Vetor:")
j=""
cont=0
b=-1
while(cont<len(s))
	j=j+s[b]
	b=b_1
print(s)	
-- ERROR:
File "XXXX", line 7
    while(cont<len(s))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:40:07) 
-- CODE:
from numpy import *

s=input("Vetor:")
j=""
cont=0
b=-1
while(cont<size(s))
	j=j+s[b]
	b=b_1
print(s)	
-- ERROR:
File "XXXX", line 7
    while(cont<size(s))
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:40:16) 
-- CODE:
from numpy import *

s=array(input("Vetor:")
j=""
cont=0
b=-1
while(cont<size(s))
	j=j+s[b]
	b=b_1
print(s)	
-- ERROR:
File "XXXX", line 4
    j=""
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:40:21) 
-- CODE:
from numpy import *

s=array(input("Vetor:"))
j=""
cont=0
b=-1
while(cont<size(s))
	j=j+s[b]
	b=b_1
print(s)	
-- ERROR:
File "XXXX", line 7
    while(cont<size(s))
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:40:33) 
-- CODE:
from numpy import *

s=array(input("Vetor:"))
j=""
cont=0
b=-1
while(cont<len(s))
	j=j+s[b]
	b=b_1
print(s)	
-- ERROR:
File "XXXX", line 7
    while(cont<len(s))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:40:40) 
-- CODE:
from numpy import *

s=array(input("Vetor:"))
j=""
cont=0
b=-1
while(cont<len(s)):
	j=j+s[b]
	b=b_1
print(s)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:40:48) 
-- CODE:
from numpy import *

s=array(input("Vetor:"))
j=""
cont=0
b=-1
while(cont<size(s)):
	j=j+s[b]
	b=b_1
print(s)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
